# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.env.template  pyproject.toml  setup.cfg
.github/workflows/: build.yml  ci-cd.yml  ci.yml  codeql-analysis.yml  gitguardian.yml
ci/: docker-compose.yml
compose/: Makefile  config.env  config.env.example  docker-compose.all.yml  docker-compose.yml
compose/dumps/: .gitignore
deploy/: Dockerfile  docker-compose.yml
deploy/server/: backend.sh  flower.sh
devops/ci/: docker-compose.yml
devops/docker/: Dockerfile
docker/: Dockerfile
docker/nginx/: nginx.conf
docker/server/: backend.sh  celery_beat.sh  celery_worker.sh  flower.sh
docs/: about.md
http/: http-client.env.json
http/auth/: login.http
http/projects/: create.http
http/users/: me.http
server/: celery_app.py  gql.py  urls.py
src/: celery_app.py  gql.py  manage.py
tests/: .graphqlconfig  Makefile  README.md  conftest.py  manage.py  pyproject.toml  schema.graphql
tests/deploy/: Dockerfile
tests/fixtures/: assets.py  couchdb.py  ghl.py  ghl_mock.py  google.py  http.py  logic.py  requests.py  settings.py  users.py
tests/git/: config  index  packed-refs
tests/helpers/: api_request_factory.py  asset_provider.py  auth.py  couchdb.py  db.py  ghl_client.py  ghl_mock.py  gql_raw_query_provider.py  httpretty_client.py  path_finder.py  request_factory.py
tests/scripts/: ci_build_images.sh
tests/test_projects/: conftest.py
tools/compose/: Makefile  config.env.example  docker-compose.all.yml  docker-compose.yml
(+393 files in other folders)
